--- a/egg/package.json
+++ b/egg/package.json
@@ -7,11 +7,14 @@
     "declarations": true
   },
   "dependencies": {
+    "-": "0.0.1",
     "await-stream-ready": "^1.0.1",
     "dayjs": "^1.8.28",
     "egg": "^2.15.1",
     "egg-mongoose": "^3.2.0",
     "egg-scripts": "^2.11.0",
+    "save": "^2.4.0",
+    "silly-datetime": "^0.1.2",
     "stream-wormhole": "^1.1.0"
   },
   "devDependencies": {
